# veneer-py

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  veneer.html  veneer.py
_sources/: includeme.txt  veneer.txt
_sources/tmp/: modules.txt
doc/: make.bat
doc/examples/functions/: CreatingFunctionsAndVariables.ipynb  GettingAndSettingFunctionOptions.ipynb
doc/examples/navigation/: 0-Introduction.ipynb
doc/examples/network/: TopologicalQueries.ipynb
doc/source/: .gitignore  conf.py  index.rst
doc/training/: .gitignore  0Setup_and_Hello_World.ipynb  1_Introduction.ipynb  2_Quick_Tour.ipynb  3_Python_Data_Analysis.ipynb  4_Run_and_Post_Process_Results.ipynb  5_Running_Iteratively.ipynb  6_Model_Setup_and_Configuration.ipynb  7_Parallel_Processing_and_Veneer_Command_Line.ipynb  8_Model_Calibration_with_PEST_and_Veneer.ipynb  SyntheticObservedFlow.csv
test/: test_copy_project_files.py  test_failure_classifier.py  test_isolated_source.py  test_proxy.py  test_start_return_shape.py  test_worker_info.py
veneer/: _failure.py  _proxy.py  actions.py  batch.py  bulk.py  cluster.py  component.py  extensions.py  extract_config.py  general.py  losses.py  manage.py  navigate.py  operations.py  pest.py  pest_runtime.py  server_side.py  stats.py  storages.py  templates.py  ts_naming_functions.py  utils.py  water_users.py
veneer/nodes/: farm_dams.py  gauges.py  inflows.py  losses.py  partitioning.py  storages.py  water_users.py
(+24 files in other folders)
